k8s/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rp-api-backend
  namespace: rotten-potatoes
spec:
  selector:
    matchLabels:
      app: rp-api-backend
  template:
    metadata:
      labels:
        app: rp-api-backend
    spec:
      containers:
      - name: rp-api-backend
        image: hubpagec/api-rotten-potatoes:v1
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
             memory: "128Mi"
             cpu: "500m"
        ports:
        - containerPort: 8080
