k8s/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rp-web-frontend
  namespace: rotten-potatoes
spec:
  selector:
    matchLabels:
      app: rp-web-frontend
  template:
    metadata:
      labels:
        app: rp-web-frontend
    spec:
      containers:
      - name: rp-web-frontend
        image: hubpagec/web-rotten-potatoes:v1
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
