k8s/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: rp-api-backend
  namespace: rotten-potatoes
spec:
  selector:
    app: rp-api-backend
  ports:
  - port: 80
    targetPort: 8080
